--- a/greenbuildingsupply/search.css
+++ b/greenbuildingsupply/search.css
@@ -1,4 +1,4 @@
-/* 
+/*
     Created on : Jun 15, 2016, 5:44:43 PM
     Author     : anuj
 */
@@ -115,14 +115,21 @@
     font-weight: bold;
 }
 
-.unbxd_pagination_contanier span:not(.unbxd_pageof):not(.unbxd_text):not(.highlight):hover {
+.unbxd_pagination_contanier span:not(.unbxd_pageof):not(.unbxd_text):not(.highlight):not(.unbxd_next):not(.unbxd_prev):hover {
     background-color: #e9e9e9;
     cursor: pointer;
 }
 
+ul.unbxd-custom-list {
+    list-style-position: inside;
+    list-style-type: disc;
+    font-size: 12px;
+    line-height: 1.4em;
+}
+
 span.unbxd_page.highlight {
     color: #fff;
-    background-color: #FF4F00;
+    background-color: #55A32A;
     font-weight: normal;
 }
 
@@ -135,13 +142,15 @@ span.unbxd_prev, span.unbxd_next {
     padding: 5px;
     height: 26px;
     width: 23px;
-    background-image: url("https://cdn.pbrd.co/images/6TRPoSKcj.png");
+    background-image: url(https://cdn.pbrd.co/images/90OC8JeKo.png);
     background-size: 15px;
     background-repeat: no-repeat;
     background-position: center;
+    background-color: #55A32A;
+    cursor: pointer;
 }
 
-span.unbxd_next {
+span.unbxd_prev {
     transform: rotate(180deg);
 }
 
@@ -210,9 +219,9 @@ span.unbxd_next {
 }
 
 #unbxd-main .facet-container ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);    
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
- 
+
 #unbxd-main .facet-container ::-webkit-scrollbar-thumb {
     background: #999;
 }*/
@@ -228,12 +237,24 @@ span.unbxd_next {
 #unbxd-main .unbxd-filters .facet-option > label {
     padding: 5px;
     display: block;
-    margin-left: 18px;
 }
 
 #unbxd-main .unbxd-filters .facet-option input[type='checkbox'] {
     margin-left: -18px;
     vertical-align: middle;
+    display:none;
+}
+
+#unbxd-main .unbxd-filters .unbxd-chkbx {
+    vertical-align: middle;
+    background: url(http://res.cloudinary.com/greenbuildingsupply/image/upload/c_scale,w_15/img/checkbox_false.png) no-repeat;
+    display: inline-block;
+    width: 15px;
+    height: 15px;
+}
+
+#unbxd-main .unbxd-filters .unbxd-chkbx.chkd {
+    background: url(http://res.cloudinary.com/greenbuildingsupply/image/upload/c_scale,w_15/img/checkbox_true.png) no-repeat;
 }
 
 #unbxd-main .unbxd-filters .facet-option:hover {
@@ -247,14 +268,14 @@ span.unbxd_next {
 
 .unbxd-filters .facet-val {
     padding-left: 5px;
-    width: 70%;
+    width: 130px;
     display: inline-block;
     vertical-align: middle;
 }
 
 .unbxd-filters .facet-count {
     text-align: right;
-    width: 30%;
+    width: 50px;
     display: inline-block;
     vertical-align: middle;
 }
@@ -271,13 +292,14 @@ span.unbxd_next {
 .unbxd-products-list-container .prod-cell-inner {
     border: 1px solid #fff;
     padding: 5px;
+    width: 232px;
 }
 
 .unbxd-products-list-container .prod-cell-inner:hover {
     background-color: #f2f2f2;
     border: 1px solid #ddd;
     position: absolute;
-    z-index: 100;
+    z-index: 1001;
     width: 232px;
 }
 
@@ -356,27 +378,27 @@ span.unbxd_next {
     color: #545454;
 }
 
-.unbxd-products-list-container .prod-manufacturer, 
+.unbxd-products-list-container .prod-manufacturer,
 .unbxd-products-list-container .prod-cell-inner .collection-store {
     color: #999;
 }
 
-.unbxd-products-list-container .prod-cell .short-desc, 
-.unbxd-products-list-container .prod-cell .custom-feature, 
-.unbxd-products-list-container .prod-cell .collection-store, 
-.unbxd-products-list-container .prod-cell .add-sample-wrapper, 
-.unbxd-products-list-container .prod-cell .shipping-info-text, 
-.unbxd-products-list-container .prod-cell .shipping-info, 
+.unbxd-products-list-container .prod-cell .short-desc,
+.unbxd-products-list-container .prod-cell .custom-feature,
+.unbxd-products-list-container .prod-cell .collection-store,
+.unbxd-products-list-container .prod-cell .add-sample-wrapper,
+.unbxd-products-list-container .prod-cell .shipping-info-text,
+.unbxd-products-list-container .prod-cell .shipping-info,
 .unbxd-products-list-container .unbxd_cell-inner .variant-showcase {
     display: none;
 }
 
-.unbxd-products-list-container .prod-cell-inner:hover .collection-store, 
-.unbxd-products-list-container .prod-cell-inner:hover .short-desc, 
-.unbxd-products-list-container .prod-cell-inner:hover .custom-feature, 
-.unbxd-products-list-container .prod-cell-inner:hover .add-sample-wrapper, 
-.unbxd-products-list-container .prod-cell-inner:hover .shipping-info, 
-.unbxd-products-list-container .prod-cell-inner:hover .shipping-info-text, 
+.unbxd-products-list-container .prod-cell-inner:hover .collection-store,
+.unbxd-products-list-container .prod-cell-inner:hover .short-desc,
+.unbxd-products-list-container .prod-cell-inner:hover .custom-feature,
+.unbxd-products-list-container .prod-cell-inner:hover .add-sample-wrapper,
+.unbxd-products-list-container .prod-cell-inner:hover .shipping-info,
+.unbxd-products-list-container .prod-cell-inner:hover .shipping-info-text,
 .unbxd-products-list-container .unbxd_cell-inner:hover .variant-showcase {
     display: block;
 }
@@ -474,6 +496,9 @@ span.unbxd_next {
     margin-bottom: 5px;
     font-size: 13px;
     color: #000;
+    margin: 0 0 5px 1em;
+    padding: 0 0 0 1em;
+    text-indent: -2em;
 }
 
 .unbxd-products-list-container .short-desc {
@@ -517,7 +542,7 @@ span.unbxd_next {
 }
 
 .unbxd-products-list-container .prod-cell .add-sample-wrapper button {
-    padding: 5px 50px;
+    padding: 5px 40px;
     width: 86%;
     display: block;
     margin: 0 auto;
@@ -611,12 +636,16 @@ span.unbxd_next {
     z-index: 1000;
 }
 
+.unbxd-products-list-container .list-prod-cell .thumb-overlay {
+    left: 10px;
+}
+
 .unbxd-products-list-container .on-sale {
     background-color: #ed1c24;
 }
 
 .unbxd-products-list-container .best-seller {
-    background-color: #27AAE1;    
+    background-color: #27AAE1;
 }
 
 .unbxd-products-list-container .new-item {
@@ -662,16 +691,16 @@ span.unbxd_next {
     color: #fff;
     background: #55A32A;
 }
- 
+
 #unbxd-main .show_more span.unbxd-plus {
     margin-right: 8px;
     font-size: 16px;
 }
- 
+
 #unbxd-main .ui-slider-range.ui-widget-header.ui-corner-all{
     background: #55a32a;
 }
- 
+
 #Price_Category-selector{
     width: 150px;
     margin: 0 auto;
@@ -718,18 +747,32 @@ a.prod-link img.prod-thumb-sub {
 }
 
 div#Price_boxes {
-    margin: 4px 20px;
+    margin: 4px 10px;
     overflow: auto;
 }
 
-#unbxd_min_box{
+#unbxd_min_box, #unbxd_max_box{
     display: inline-block;
-    width: 40%;
+    width: 30%;
+    vertical-align: middle;
+    font-size: 12px;
 }
 
-#unbxd_max_box{
+#Price_boxes .unbxd-price-button {
     display: inline-block;
-    width: 40%;
+    width: 20%;
+    margin-left: 2%;
+    height: 23px;
+    vertical-align: middle;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+    background-color: #eee;
+    cursor: pointer;
+    font-size: 12px;
+}
+
+#Price_boxes .unbxd-price-button:hover {
+    background-color: #ccc;
 }
 
 .ui-slider-range.ui-widget-header.ui-corner-all{
@@ -741,4 +784,8 @@ div#Price_boxes {
     margin: 0 auto;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+
+#Price_Category-selector, .ui-slider-handle {
+    cursor: pointer !important;
 }
